fixed viewport overflow

--- a/styles/Junior_dev.css
+++ b/styles/Junior_dev.css
@@ -14,7 +14,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(../images/doodle-glowing-artwork-vhu5ts3hs8bxyq5a.jpg);
+    background: linear-gradient(rgba(0,0,0, 0.5), rgba(0,0,0,0.5)), url(../images/doodle-glowing-artwork-vhu5ts3hs8bxyq5a.jpg);
     background-size: contain;
     background-repeat: repeat-y;
 }
@@ -293,6 +293,9 @@ main {
     font-family: cursive;
 
 }
+
+
+
 
 .sec-p{
     width: 80%;
